--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Folio - Personal Portfolio Template</title>
+  <title>Sumit Lakhera </title>
   <meta content="" name="keywords">
   <meta content="" name="description">
 
@@ -76,11 +76,12 @@
 
         <ul class="list-unstyled list-social">
           <li><a href="#"><i class="ion-social-facebook"></i></a></li>
-          <li><a href="#"><i class="ion-social-twitter"></i></a></li>
+          <!-- <li><a href="#"><i class="ion-social-twitter"></i></a></li>
           <li><a href="#"><i class="ion-social-instagram"></i></a></li>
           <li><a href="#"><i class="ion-social-googleplus"></i></a></li>
           <li><a href="#"><i class="ion-social-tumblr"></i></a></li>
-          <li><a href="#"><i class="ion-social-dribbble"></i></a></li>
+          <li><a href="#"><i class="ion-social-dribbble"></i></a></li> -->
+          <li><a href="#"><i class="ion-email"></i></a></li>
         </ul>
       </div>
     </div>
@@ -96,7 +97,7 @@
         <div class="col-lg-4 ">
           <div class="div-img-bg">
             <div class="about-img">
-              <img src="images/me.jpg" class="img-responsive" alt="me">
+              <img src="images/ideator.JPG" class="img-responsive" alt="me">
             </div>
           </div>
         </div>
@@ -104,9 +105,31 @@
         <div class="col-lg-7">
           <div class="about-descr">
 
-            <p class="p-heading">im a ux /ui designer austin based who loves clean, simple & unique design. i also enjoy crafting brand identities, icons, & ilustration work. </p>
-            <p class="separator">To an English person, it will seem like simplified English, as a skeptical Cambridge friend of mine told me what Occidental is. The European languages are members of the same family.English person.</p>
+            <p class="p-heading">A successful product needs to travel through two worlds before it comes to life. These two worlds are design and engineering, wherein design defines the basic purpose it serves, the engineering makes it possible and practical.
+            </p>
+            <p class="separator">I am a mechanical engineer graduate from Indian college (G.B. Pant University of Agri & tech) and Postgraduate from Italian – visionary design school @ Milan (Domus Academy)  and worked 10+ years in global automotive MNCs such as Mercedes Benz R&D & Tata Motors Ltd</p>
 
+            <h5 class=p-heading" style="margin-top: 24px;">Skills</h5>
+            <p class="separator" style="word-spacing: 20px;">
+              
+              Ideation-Sketching 
+              Photoshop
+              WireframeDesign
+              ClayModelling
+              3dSoftware
+              MockPreparation
+              DesignMoodBoards
+              NewTechnologyResearch-Exploration
+              ProcessEngineering
+              LayoutPlanning
+              Bio-mimicryResearch
+              CAD-Digitalization
+              3dprinting
+              CAD–Modelling
+               WoodenPrototypes
+              Microcontroller&SmartPhoneAppbasedUXPrototype
+          </p>
+           
           </div>
 
         </div>
@@ -126,7 +149,7 @@
 
             <i class="ion-ios-browsers-outline"></i>
             <span>UI/UX DESIGN</span>
-            <p class="separator">To an English person, it will seem like simplified English,told me what </p>
+            <p class="separator"> </p>
 
           </div>
 
@@ -134,7 +157,7 @@
 
             <i class="ion-ios-lightbulb-outline"></i>
             <span>BRAND IDENTITY</span>
-            <p class="separator">To an English person, it will seem like simplified English,told me what </p>
+            <p class="separator"> </p>
 
           </div>
 
@@ -142,7 +165,7 @@
 
             <i class="ion-ios-color-wand-outline"></i>
             <span>WEB DESIGN</span>
-            <p class="separator">To an English person, it will seem like simplified English,told me what </p>
+            <p class="separator"> </p>
 
           </div>
 
@@ -150,7 +173,7 @@
 
             <i class="ion-social-android-outline"></i>
             <span>MOBILE APPS</span>
-            <p class="separator">To an English person, it will seem like simplified English,told me what </p>
+            <p class="separator"> </p>
 
           </div>
 
@@ -158,7 +181,7 @@
 
             <i class="ion-ios-analytics-outline"></i>
             <span>Analytics</span>
-            <p class="separator">To an English person, it will seem like simplified English,told me what </p>
+            <p class="separator"> </p>
 
           </div>
 
@@ -166,7 +189,7 @@
 
             <i class="ion-ios-camera-outline"></i>
             <span>PHOTOGRAPHY</span>
-            <p class="separator">To an English person, it will seem like simplified English,told me what </p>
+            <p class="separator"> </p>
 
           </div>
 
@@ -195,48 +218,49 @@
 
             <ul class="nav list-unstyled" id="portfolio-flters">
               <li class="filter filter-active" data-filter=".all">all</li>
-              <li class="filter" data-filter=".branding">branding</li>
-              <li class="filter" data-filter=".mockups">mockups</li>
-              <li class="filter" data-filter=".uikits">ui kits</li>
-              <li class="filter" data-filter=".webdesign">web design</li>
-              <li class="filter" data-filter=".photography">photography</li>
+              <li class="filter" data-filter=".3dPrinting">3dPrinting</li>
+              <li class="filter" data-filter=".Clay">Clay</li>
+              <li class="filter" data-filter=".Art">Art</li>
+              <li class="filter" data-filter=".Ideator">Ideator</li>
+              <!-- <li class="filter" data-filter=".webdesign">web design</li>
+              <li class="filter" data-filter=".photography">photography</li> -->
             </ul>
 
           </div>
 
           <div class="portfolio-container">
 
-            <div class="col-lg-4 col-md-6 portfolio-thumbnail all branding uikits webdesign">
+            <div class="col-lg-4 col-md-6 portfolio-thumbnail all Art">
               <a class="popup-img" href="images/portfolio/1.jpg">
                 <img src="images/portfolio/1.jpg" alt="img">
               </a>
             </div>
 
-            <div class="col-lg-4 col-md-6 portfolio-thumbnail all mockups uikits photography">
+            <div class="col-lg-4 col-md-6 portfolio-thumbnail all 3dPrinting">
               <a class="popup-img" href="images/portfolio/2.jpg">
                 <img src="images/portfolio/2.jpg"  alt="img">
               </a>
             </div>
 
-            <div class="col-lg-4 col-md-6 portfolio-thumbnail all branding webdesig photographyn">
+            <div class="col-lg-4 col-md-6 portfolio-thumbnail all Art">
               <a class="popup-img" href="images/portfolio/3.jpg">
                 <img src="images/portfolio/3.jpg" alt="img">
               </a>
             </div>
 
-            <div class="col-lg-4 col-md-6 portfolio-thumbnail all mockups webdesign photography">
+            <div class="col-lg-4 col-md-6 portfolio-thumbnail all Clay ">
               <a class="popup-img" href="images/portfolio/4.jpg">
                 <img src="images/portfolio/4.jpg" alt="img">
               </a>
             </div>
 
-            <div class="col-lg-4 col-md-6 portfolio-thumbnail all branding uikits photography">
+            <div class="col-lg-4 col-md-6 portfolio-thumbnail all Ideator ">
               <a class="popup-img" href="images/portfolio/5.jpg">
                 <img src="images/portfolio/5.jpg" alt="img">
               </a>
             </div>
 
-            <div class="col-lg-4 col-md-6 portfolio-thumbnail all mockups uikits webdesign">
+            <div class="col-lg-4 col-md-6 portfolio-thumbnail all Art">
               <a class="popup-img" href="images/portfolio/6.jpg">
                 <img src="images/portfolio/6.jpg" alt="img">
               </a>
@@ -252,7 +276,7 @@
 
 
   <!-- start section journal -->
-  <div id="journal" class="text-left paddsection">
+  <!-- <div id="journal" class="text-left paddsection">
 
     <div class="container">
       <div class="section-title text-center">
@@ -316,7 +340,7 @@
       </div>
     </div>
 
-  </div>
+  </div> -->
   <!-- End section journal -->
 
 
@@ -329,13 +353,11 @@
           <div class="col-lg-6">
             <div class="contact-contact">
 
-              <h2 class="mb-30">GET IN TOUCH</h2>
-
+              <h2 class="mb-30">Contact US</h2>
+              <h4>Naugrah Research & Development (OPC) Pvt</h4>
               <ul class="contact-details">
-                <li><span>23 Main, Street</span></li>
-                <li><span>New York, United States</span></li>
-                <li><span>+88 01912704287</span></li>
-                <li><span>example@example.com</span></li>
+                <li><span>IKP EDEN,16, Bhuvanappa Layout,Tavarekere Main Rd</span></li>
+                <li><span>Bengaluru,560029</span></li>
               </ul>
 
             </div>
@@ -406,7 +428,7 @@
 
       </div>
 
-      <p>&copy; Copyrights Folio. All rights reserved.</p>
+      <p>&copy; Copyrights 2019. All rights reserved.</p>
 
       <div class="credits">
         <!--
@@ -415,7 +437,7 @@
           Licensing information: https://bootstrapmade.com/license/
           Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=Folio
         -->
-        Designed with ❤️ by Argha
+        Designed with ❤️ by Argha Ray
       </div>
 
     </div>
