--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           <li><a href="#"><i class="ion-social-googleplus"></i></a></li>
           <li><a href="#"><i class="ion-social-tumblr"></i></a></li>
           <li><a href="#"><i class="ion-social-dribbble"></i></a></li> -->
-          <li><a href="#"><i class="ion-email"></i></a></li>
+          <li><a href="mailto:lakherasumit@gmail.com"><i class="ion-email"></i></a></li>
         </ul>
       </div>
     </div>
@@ -386,13 +386,13 @@
 
                 <div class="col-lg-12">
                   <div class="form-group">
-                    <textarea class="form-control" name="message" rows="12" data-rule="required" data-msg="Please write something for us" placeholder="Message"></textarea>
+                    <textarea class="form-control" name="message" id="message" rows="12" data-rule="required" data-msg="Please write something for us" placeholder="Message"></textarea>
                     <div class="validation"></div>
                   </div>
                 </div>
 
                 <div class="col-lg-12">
-                  <input type="submit" class="btn btn-defeault btn-send" value="Send message">
+                  <input type="submit" class="btn btn-defeault btn-send" id="send-message" value="Send message">
                 </div>
 
               </div>
@@ -424,13 +424,7 @@
       <p>&copy; Copyrights 2019. All rights reserved.</p>
 
       <div class="credits">
-        <!--
-          All the links in the footer should remain intact.
-          You can delete the links only if you purchased the pro version.
-          Licensing information: https://bootstrapmade.com/license/
-          Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=Folio
-        -->
-        Designed with ❤️ by Argha Ray
+        Made with ❤️ by <a href="https://www.linkedin.com/in/reachout-argha/">Argha Ray</a>
       </div>
 
     </div>
