updated about info

--- a/index.html
+++ b/index.html
@@ -97,13 +97,13 @@
 
         <div class="col-lg-7">
           <div class="about-descr">
-
-            <p class="p-heading">A successful product needs to travel through two worlds before it comes to life. These two worlds are design and engineering, wherein design defines the basic purpose it serves, the engineering makes it possible and practical.
+            <p class="p-heading"> A successful product needs to travel through two worlds before it comes to life. These two words are design and engineering, wherein design defines the basic purpose it serves, the engineering makes it possible and practical. I have been fortunate enough to study across and work in both these worlds!
             </p>
-            <p class="separator">I am a mechanical engineer graduate from Indian college (G.B. Pant University of Agri & tech) and Postgraduate from Italian – visionary design school @ Milan (Domus Academy)  and worked 10+ years in global automotive MNCs such as Mercedes Benz R&D & Tata Motors Ltd</p>
+            <p class="separator">I Studied Bachelor of technology - Mechanical engineering (2008) from India, Master in car and transportation design from Italy (2015), worked in Automotive sector for 10+ years – worked at India, Germany, USA , Italy for short periods with diverse teams from diverse culture & professional background. International 1st runner up award in ARPA-e car design challenge and successfully developed futuristic vision concepts in diverse fields with top companies.
+            </p>
 
-            <h5 class=p-heading" style="margin-top: 24px;">Skills</h5>
-            <p class="separator" style="word-spacing: 20px;">
+            <h5 class=p-heading" style="margin-top: 24px; text-align: center;">Skills</h5>
+            <!-- <p class="separator" style="word-spacing: 20px;">
               
               Ideation-Sketching 
               Photoshop
@@ -121,7 +121,43 @@
               CAD–Modelling
                WoodenPrototypes
               Microcontroller&SmartPhoneAppbasedUXPrototype
-          </p>
+          </p> -->
+          <div class="container" style="margin-top: 10px;">
+            <div class="row">
+              <div class="col border-right">
+                <h3>Design</h3>
+                <ul class="pad-15">
+                  <li>Ideation – sketching</li>
+                  <li>Photoshop</li>
+                  <li>wireframe design</li>
+                  <li>Clay modelling </li>
+                  <li>3d software</li>
+                  <li>Mock preparation</li>
+                  <li>Design mood board </li>
+                </ul>
+              </div>
+              <div class="col border-right">
+                <h3>Engineering</h3> 
+                <ul class="pad-15">
+                  <li>New Technology Research - Exploration </li>
+                  <li>Process engineering</li>
+                  <li>Layout Planning</li>
+                  <li>Bio-mimicry research</li>
+                  <li>CAD - digitalization</li>
+                </ul>
+              </div>
+              <div class="col">
+                <h3>Prototyping</h3>
+                <ul class="pad-15">
+                  <li>3d printing</li>
+                  <li>CAD – modelling</li>
+                  <li>Wooden prototypes</li>
+                  <li>Microcontroller </li>
+                  <li>Smart pone app based UX prototype</li>
+                </ul>
+              </div>
+            </div>
+          </div>
            
           </div>
 
