--- a/index.html
+++ b/index.html
@@ -383,7 +383,8 @@
             <div class="contact-contact">
 
               <h2 class="mb-30">Contact US</h2>
-              <h4>Naugrah Research & Development (OPC) Pvt</h4>
+              <div class="mapouter"><div class="gmap_canvas"><iframe width="400" height="300" id="gmap_canvas" src="https://maps.google.com/maps?q=ikp%20koramangala&t=&z=17&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://www.embedgooglemap.net/blog/elementor-review/"></a></div><style>.mapouter{position:relative;text-align:right;height:300px;width:400px;}.gmap_canvas {overflow:hidden;background:none!important;height:300px;width:400px;}</style></div>
+              <h4 style="margin-top: 30px;"> Naugrah Research & Development (OPC) Pvt</h4>
               <ul class="contact-details">
                 <li><span>IKP EDEN,16, Bhuvanappa Layout,Tavarekere Main Rd</span></li>
                 <li><span>Bengaluru,560029</span></li>
