changed images and orientation layout

--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
 
   <!-- start section header -->
   <div id="header" class="home">
-
+      <img src="/images/ideator.JPG" alt="" style="width:50%;height: 100vh;" class="float-right">
+  
     <div class="container">
       <div class="header-content">
         <h1>I'm <span class="typed"></span></h1>
@@ -90,7 +91,7 @@
         <div class="col-lg-4 ">
           <div class="div-img-bg">
             <div class="about-img">
-              <img src="images/ideator.JPG" class="img-responsive" alt="me">
+              <img src="images/home.JPG" class="img-responsive" alt="me">
             </div>
           </div>
         </div>
