made skills part responsive

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
           </p> -->
           <div class="container" style="margin-top: 10px;">
             <div class="row">
-              <div class="col border-right">
+              <div class="col-md-4 col-xs-12 border-right">
                 <h3>Design</h3>
                 <ul class="pad-15">
                   <li>Ideation – sketching</li>
@@ -137,7 +137,7 @@
                   <li>Design mood board </li>
                 </ul>
               </div>
-              <div class="col border-right">
+              <div class="col-md-4 col-xs-12 border-right">
                 <h3>Engineering</h3> 
                 <ul class="pad-15">
                   <li>New Technology Research - Exploration </li>
@@ -147,7 +147,7 @@
                   <li>CAD - digitalization</li>
                 </ul>
               </div>
-              <div class="col">
+              <div class="col-md-4 col-xs-12">
                 <h3>Prototyping</h3>
                 <ul class="pad-15">
                   <li>3d printing</li>
