--- a/index.html
+++ b/index.html
@@ -125,9 +125,9 @@
           </p> -->
           <div class="container" style="margin-top: 10px;">
             <div class="row">
-              <div class="col-md-4 col-xs-12 border-right">
+              <div class="col-md-4 col-xs-12 ">
                 <h3>Design</h3>
-                <ul class="pad-15">
+                <ul class="pad-15 border-right">
                   <li>Ideation – sketching</li>
                   <li>Photoshop</li>
                   <li>wireframe design</li>
@@ -137,9 +137,9 @@
                   <li>Design mood board </li>
                 </ul>
               </div>
-              <div class="col-md-4 col-xs-12 border-right">
+              <div class="col-md-4 col-xs-12 ">
                 <h3>Engineering</h3> 
-                <ul class="pad-15">
+                <ul class="pad-15 border-right">
                   <li>New Technology Research - Exploration </li>
                   <li>Process engineering</li>
                   <li>Layout Planning</li>
